syntax = "proto3";

option go_package = "github.com/TOMOFUMI-KONDO/parsequic/proto";

package proto;

service ParseQuic{
  rpc Parse(ParseQuicRequest)returns(ParseQuicReply){}
}

message ParseQuicRequest{
  bytes data = 1;
}

enum PacketType {
  SHORT_HEADER = 0;
  INITIAL = 1;
  ZERO_RTT = 2;
  HANDSHAKE = 3;
  RETRY = 4;
}

message ParseQuicReply{
  bool isLongHeader = 1;
  PacketType type = 2;
  uint32 version = 3;
  bytes dstConnID = 4;
  bytes srcConnID = 5;
}
